include/turbo/turbo.h

/* ---- Handles ----------------------------------------------------------- */

typedef struct turbo_runtime   turbo_runtime;   /* the library, its devices */
typedef struct turbo_model     turbo_model;     /* a bundle loaded on a context */
typedef struct turbo_tokenizer turbo_tokenizer; /* the bundle's tokenizer   */
/* ---- Small types ------------------------------------------------------- */

/* UTF-8 view. ptr may be NULL only when len is 0. Not NUL-terminated. */
typedef struct turbo_text {
    const char *ptr;
    uint64_t    len;
} turbo_text;
/* Caller-owned. On success code is 0 and message[0] is 0. */
typedef struct turbo_error {
    uint32_t struct_size;
    int32_t  code;
    uint32_t field;     /* 1-based field index for the two errors that name one, else 0 */
    char     message[TURBO_ERROR_MESSAGE_LEN];   /* NUL-terminated UTF-8 */
} turbo_error;
/* ---- Tokenizer --------------------------------------------------------- */

typedef struct turbo_tokenizer_info {
    uint32_t struct_size;
    uint32_t vocab_size;
    uint32_t max_seq;
    uint32_t specials_per_sequence;
    int32_t  pad_id;    /* or -1 */
    int32_t  bos_id;
    int32_t  eos_id;
    int32_t  unk_id;
    char     kind[32];  /* wordpiece, bpe, unigram */
    char     sha256[72];
} turbo_tokenizer_info;
typedef struct turbo_encode_options {
    uint32_t struct_size;
    uint32_t add_special_tokens;   /* 1 = yes (the default when opts is NULL) */
    uint32_t truncate;             /* TURBO_TRUNCATE_* */
    uint32_t max_tokens;           /* including specials; 0 = the bundle's max_seq */
    uint32_t prompt_role;          /* TURBO_PROMPT_* */
} turbo_encode_options;
/* The tokenizer the bundle names. Thread-safe. The same ids on every machine. */
int32_t turbo_tokenizer_create(turbo_runtime *rt, turbo_text bundle_path, turbo_tokenizer **out, turbo_error *err);
void    turbo_tokenizer_release(turbo_tokenizer *t);
int32_t turbo_tokenizer_get_info(turbo_tokenizer *t, turbo_tokenizer_info *out, turbo_error *err);
/* Encode count texts into caller-owned [count, row_stride] int32 arrays.
 * Rows are padded with pad_id and mask 0 to row_stride. types may be NULL.
 * lengths, if non-NULL, receives each row's live token count. */
int32_t turbo_tokenizer_encode(turbo_tokenizer *t, const turbo_text *texts, uint32_t count,
                               const turbo_encode_options *opts,
                               int32_t *ids, int32_t *mask, int32_t *types,
                               uint32_t row_stride, uint32_t *lengths, turbo_error *err);