bindings/java/src/main/java/ai/pipestream/turbo/ffi/TurboNative.java


        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_generate");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_generate(turbo_model *m, const turbo_generate_desc *desc, const turbo_message *messages, uint32_t count, turbo_stream_fn callback, void *user_data, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_generate$descriptor() {
        return turbo_generate.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_generate(turbo_model *m, const turbo_generate_desc *desc, const turbo_message *messages, uint32_t count, turbo_stream_fn callback, void *user_data, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_generate$handle() {
        return turbo_generate.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_generate(turbo_model *m, const turbo_generate_desc *desc, const turbo_message *messages, uint32_t count, turbo_stream_fn callback, void *user_data, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_generate$address() {
        return turbo_generate.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_generate(turbo_model *m, const turbo_generate_desc *desc, const turbo_message *messages, uint32_t count, turbo_stream_fn callback, void *user_data, turbo_error *err)
     * }
     */
    public static int turbo_generate(MemorySegment m, MemorySegment desc, MemorySegment messages, int count, MemorySegment callback, MemorySegment user_data, MemorySegment err) {
        var mh$ = turbo_generate.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_generate", m, desc, messages, count, callback, user_data, err);
            }
            return (int)mh$.invokeExact(m, desc, messages, count, callback, user_data, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_tokenizer_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            turbo_text.layout(),
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_tokenizer_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_tokenizer_create(turbo_runtime *rt, turbo_text bundle_path, turbo_tokenizer **out, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_tokenizer_create$descriptor() {
        return turbo_tokenizer_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_tokenizer_create(turbo_runtime *rt, turbo_text bundle_path, turbo_tokenizer **out, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_tokenizer_create$handle() {
        return turbo_tokenizer_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_tokenizer_create(turbo_runtime *rt, turbo_text bundle_path, turbo_tokenizer **out, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_tokenizer_create$address() {
        return turbo_tokenizer_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_tokenizer_create(turbo_runtime *rt, turbo_text bundle_path, turbo_tokenizer **out, turbo_error *err)
     * }
     */
    public static int turbo_tokenizer_create(MemorySegment rt, MemorySegment bundle_path, MemorySegment out, MemorySegment err) {
        var mh$ = turbo_tokenizer_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_tokenizer_create", rt, bundle_path, out, err);
            }
            return (int)mh$.invokeExact(rt, bundle_path, out, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_tokenizer_release {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_tokenizer_release");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void turbo_tokenizer_release(turbo_tokenizer *t)
     * }
     */
    public static FunctionDescriptor turbo_tokenizer_release$descriptor() {
        return turbo_tokenizer_release.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void turbo_tokenizer_release(turbo_tokenizer *t)
     * }
     */
    public static MethodHandle turbo_tokenizer_release$handle() {
        return turbo_tokenizer_release.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void turbo_tokenizer_release(turbo_tokenizer *t)
     * }
     */
    public static MemorySegment turbo_tokenizer_release$address() {
        return turbo_tokenizer_release.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void turbo_tokenizer_release(turbo_tokenizer *t)
     * }
     */
    public static void turbo_tokenizer_release(MemorySegment t) {
        var mh$ = turbo_tokenizer_release.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_tokenizer_release", t);
            }
            mh$.invokeExact(t);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_tokenizer_get_info {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_tokenizer_get_info");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_tokenizer_get_info(turbo_tokenizer *t, turbo_tokenizer_info *out, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_tokenizer_get_info$descriptor() {
        return turbo_tokenizer_get_info.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_tokenizer_get_info(turbo_tokenizer *t, turbo_tokenizer_info *out, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_tokenizer_get_info$handle() {
        return turbo_tokenizer_get_info.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_tokenizer_get_info(turbo_tokenizer *t, turbo_tokenizer_info *out, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_tokenizer_get_info$address() {
        return turbo_tokenizer_get_info.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_tokenizer_get_info(turbo_tokenizer *t, turbo_tokenizer_info *out, turbo_error *err)
     * }
     */
    public static int turbo_tokenizer_get_info(MemorySegment t, MemorySegment out, MemorySegment err) {
        var mh$ = turbo_tokenizer_get_info.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_tokenizer_get_info", t, out, err);
            }
            return (int)mh$.invokeExact(t, out, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_tokenizer_encode {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_tokenizer_encode");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_tokenizer_encode(turbo_tokenizer *t, const turbo_text *texts_ptr, uint32_t count, const turbo_encode_options *opts, int32_t *ids, int32_t *mask, int32_t *types, uint32_t row_stride, uint32_t *lengths, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_tokenizer_encode$descriptor() {
        return turbo_tokenizer_encode.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_tokenizer_encode(turbo_tokenizer *t, const turbo_text *texts_ptr, uint32_t count, const turbo_encode_options *opts, int32_t *ids, int32_t *mask, int32_t *types, uint32_t row_stride, uint32_t *lengths, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_tokenizer_encode$handle() {
        return turbo_tokenizer_encode.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_tokenizer_encode(turbo_tokenizer *t, const turbo_text *texts_ptr, uint32_t count, const turbo_encode_options *opts, int32_t *ids, int32_t *mask, int32_t *types, uint32_t row_stride, uint32_t *lengths, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_tokenizer_encode$address() {
        return turbo_tokenizer_encode.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_tokenizer_encode(turbo_tokenizer *t, const turbo_text *texts_ptr, uint32_t count, const turbo_encode_options *opts, int32_t *ids, int32_t *mask, int32_t *types, uint32_t row_stride, uint32_t *lengths, turbo_error *err)
     * }
     */
    public static int turbo_tokenizer_encode(MemorySegment t, MemorySegment texts_ptr, int count, MemorySegment opts, MemorySegment ids, MemorySegment mask, MemorySegment types, int row_stride, MemorySegment lengths, MemorySegment err) {
        var mh$ = turbo_tokenizer_encode.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_tokenizer_encode", t, texts_ptr, count, opts, ids, mask, types, row_stride, lengths, err);
            }
            return (int)mh$.invokeExact(t, texts_ptr, count, opts, ids, mask, types, row_stride, lengths, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_tokenizer_decode {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_INT,
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_LONG,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_tokenizer_decode");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
